[package]
name = "web"
version = "0.1.0"
authors = ["evgeniy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
mime = "0.3"
mime_guess = "2.0"
percent-encoding = "2.1"
